--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-12-21 19:07-0600\n"
+"PO-Revision-Date: 2020-12-22 19:53-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2150,7 +2150,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:1249
 msgid "Documentation for the :mod:`gc` module."
-msgstr ""
+msgstr "Documentación para el módulo :mod:`gc`."
 
 #: ../Doc/reference/datamodel.rst:1253
 msgid ""
@@ -2158,6 +2158,10 @@ msgid ""
 "invoked, exceptions that occur during their execution are ignored, and a "
 "warning is printed to ``sys.stderr`` instead.  In particular:"
 msgstr ""
+"Debido a las circunstancias inciertas bajo las que los métodos :meth:"
+"`__del__` son invocados, las excepciones que ocurren durante su ejecución "
+"son ignoradas, y una advertencia es mostrada hacia ``sys.stderr``. En "
+"particular:"
 
 #: ../Doc/reference/datamodel.rst:1257
 msgid ""
@@ -2167,6 +2171,12 @@ msgid ""
 "may already be taken by the code that gets interrupted to execute :meth:"
 "`__del__`."
 msgstr ""
+":meth:`__del__` puede ser invocado cuando código arbitrario es ejecutado, "
+"incluyendo el de cualquier hilo arbitrario. Si :meth:`__del__` necesita "
+"realizar un cierre de exclusión mutua (*lock*) o invocar cualquier otro "
+"recurso que lo esté bloqueando, podría provocar un bloqueo muto (*deadlock*) "
+"ya que el recurso podría estar siendo utilizado por el código que se "
+"interrumpe al ejecutar :meth:`__del__`."
 
 #: ../Doc/reference/datamodel.rst:1263
 msgid ""
@@ -2178,6 +2188,14 @@ msgid ""
 "such globals exist, this may help in assuring that imported modules are "
 "still available at the time when the :meth:`__del__` method is called."
 msgstr ""
+":meth:`__del__` puede ser ejecutado durante el cierre del intérprete. Como "
+"consecuencia, las variables globales que necesita para acceder (incluyendo "
+"otros módulos) podrían haber sido borradas o establecidas a ``None``. Python "
+"garantiza que los globales cuyo nombre comienza con un guión bajo simple "
+"sean borrados de su módulo antes que los globales sean borrados; si no "
+"existen otras referencias a dichas globales, esto puede ayudar asegurando "
+"que los módulos importados aún se encuentren disponibles al momento de "
+"llamar al método :meth:`__del__`."
 
 #: ../Doc/reference/datamodel.rst:1278
 msgid ""
@@ -2190,12 +2208,23 @@ msgid ""
 "`__repr__` but not :meth:`__str__`, then :meth:`__repr__` is also used when "
 "an \"informal\" string representation of instances of that class is required."
 msgstr ""
+"Llamado por la función incorporada :func:`repr` para calcular la cadena "
+"“oficial” de representación de un objeto. Si es posible, esto debería verse "
+"como una expresión de Python válida que puede ser utilizada para recrear un "
+"objeto con el mismo valor (bajo el ambiente adecuado). Si no es posible, una "
+"cadena con la forma ``<…some useful description…>`` debe ser retornada. El "
+"valor de retorno debe ser un objeto de cadena (*string*). Si una clase "
+"define :meth:`__repr__` pero no :meth:`__str__`, entonces :meth:`__repr__` "
+"también es utilizado cuando una cadena “informal” de representación de "
+"instancias de esas clases son requeridas."
 
 #: ../Doc/reference/datamodel.rst:1287
 msgid ""
 "This is typically used for debugging, so it is important that the "
 "representation is information-rich and unambiguous."
 msgstr ""
+"Esto es típicamente utilizado para depurar, así que es importante que la "
+"representación sea rica en información e inequívoca."
 
 #: ../Doc/reference/datamodel.rst:1298
 msgid ""
@@ -2204,6 +2233,10 @@ msgid ""
 "string representation of an object.  The return value must be a :ref:`string "
 "<textseq>` object."
 msgstr ""
+"Llamado por :func:`str(object) <str>` y las funciones incorporadas :func:"
+"`format` y :func:`print` para calcular la “informal” o bien mostrada cadena "
+"de representación de un objeto. El valor de retorno debe ser un objeto :ref:"
+"`string <textseq>`."
 
 #: ../Doc/reference/datamodel.rst:1303
 msgid ""
@@ -2211,18 +2244,25 @@ msgid ""
 "expectation that :meth:`__str__` return a valid Python expression: a more "
 "convenient or concise representation can be used."
 msgstr ""
+"Este método difiere de :meth:`object.__repr__` en que no hay expectativas de "
+"que :meth:`__str__` retorne una expresión de Python válida: una "
+"representación más conveniente o concisa pueda ser utilizada."
 
 #: ../Doc/reference/datamodel.rst:1307
 msgid ""
 "The default implementation defined by the built-in type :class:`object` "
 "calls :meth:`object.__repr__`."
 msgstr ""
+"La implementación por defecto definida por el tipo incorporado :class:"
+"`object` llama a :meth:`object.__repr__`."
 
 #: ../Doc/reference/datamodel.rst:1317
 msgid ""
 "Called by :ref:`bytes <func-bytes>` to compute a byte-string representation "
 "of an object. This should return a :class:`bytes` object."
 msgstr ""
+"Llamado por :ref:`bytes <func-bytes>` para calcular la representación de la "
+"cadena de byte de un objeto. Este deberá retornar un objeto :class:`bytes`."
 
 #: ../Doc/reference/datamodel.rst:1328
 msgid ""
@@ -2235,27 +2275,41 @@ msgid ""
 "either delegate formatting to one of the built-in types, or use a similar "
 "formatting option syntax."
 msgstr ""
+"Llamado por la función incorporada :func:`format`, y por extensión, la "
+"evaluación de :ref:`formatted string literals <f-strings>` y el método :meth:"
+"`str.format`, para producir la representación “formateada” de un objeto. El "
+"argumento *format_spec* es una cadena que contiene una descripción de las "
+"opciones de formato deseadas. La interpretación del argumento *format_spec* "
+"depende del tipo que implementa :meth:`__format__`, sin embargo, ya sea que "
+"la mayoría de las clases deleguen el formato a uno de los tipos "
+"incorporados, o utilicen una sintaxis de opción de formato similar."
 
 #: ../Doc/reference/datamodel.rst:1338
 msgid ""
 "See :ref:`formatspec` for a description of the standard formatting syntax."
 msgstr ""
+"Ver :ref:`formatspec` para una descripción de la sintaxis de formato "
+"estándar."
 
 #: ../Doc/reference/datamodel.rst:1340
 msgid "The return value must be a string object."
-msgstr ""
+msgstr "El valor de retorno debe ser un objeto de cadena."
 
 #: ../Doc/reference/datamodel.rst:1342
 msgid ""
 "The __format__ method of ``object`` itself raises a :exc:`TypeError` if "
 "passed any non-empty string."
 msgstr ""
+"El método __format__ del mismo ``object`` lanza un :exc:`TypeError` si se la "
+"pasa una cadena no vacía."
 
 #: ../Doc/reference/datamodel.rst:1346
 msgid ""
 "``object.__format__(x, '')`` is now equivalent to ``str(x)`` rather than "
 "``format(str(self), '')``."
 msgstr ""
+"``object.__format__(x, ‘’)`` es ahora equivalente a ``str(x)`` en lugar de "
+"``format(str(self), ‘’)``."
 
 #: ../Doc/reference/datamodel.rst:1362
 msgid ""
@@ -2265,6 +2319,11 @@ msgid ""
 "``x!=y`` calls ``x.__ne__(y)``, ``x>y`` calls ``x.__gt__(y)``, and ``x>=y`` "
 "calls ``x.__ge__(y)``."
 msgstr ""
+"Estos son los llamados métodos de comparación *rich*. La correspondencia "
+"entre símbolos de operador y los nombres de método es de la siguiente "
+"manera: ``x<y`` llama ``x.__lt__(y)``, ``x<=y`` llama ``x.__le__(y)``, "
+"``x==y`` llama ``x.__eq__(y)``, ``x!=y`` llama ``x.__ne__(y)``, ``x>y`` "
+"llama ``x.__gt__(y)``, y ``x>=y`` llama ``x.__ge__(y)``."
 
 #: ../Doc/reference/datamodel.rst:1368
 msgid ""
@@ -2276,6 +2335,14 @@ msgid ""
 "statement), Python will call :func:`bool` on the value to determine if the "
 "result is true or false."
 msgstr ""
+"Un método de comparación *rich* puede retornar el único ``NotImplemented`` "
+"si no implementa la operación para un par de argumentos dados. Por "
+"convención, ``False`` y ``True`` son retornados para una comparación "
+"exitosa. Sin embargo, estos métodos pueden retornar cualquier valor, así que "
+"si el operador de comparación es utilizado en un contexto Booleano (p. ej. "
+"en la condición de una sentencia ``if``), Python llamará :func:`bool` en "
+"dicho valor para determinar si el resultado es verdadero (*true*) o falso "
+"(*false*)."
 
 #: ../Doc/reference/datamodel.rst:1375
 msgid ""
@@ -2286,6 +2353,12 @@ msgid ""
 "ordering operations from a single root operation, see :func:`functools."
 "total_ordering`."
 msgstr ""
+"Por defecto, :meth:`__ne__` delega a :meth:`__eq__` e invierte el resultado "
+"a menos que éste sea ``NotImplemented``. No existen otras relaciones "
+"implícitas entre los operadores de comparación, por ejemplo, la verdad de "
+"``(x<y or x==y)`` no implica que ``x<=y``. Para generar automáticamente "
+"operaciones de ordenamiento a partir de una sola operación raíz, ver :func:"
+"`functools.total_ordering`."
 
 #: ../Doc/reference/datamodel.rst:1382
 msgid ""
@@ -2293,6 +2366,9 @@ msgid ""
 "term:`hashable` objects which support custom comparison operations and are "
 "usable as dictionary keys."
 msgstr ""
+"Ver el párrafo sobre :meth:`__hash__` para más notas importantes sobre la "
+"creación de objetos :term:`hashable` que soportan operaciones de comparación "
+"personalizadas y son utilizables como llaves de diccionario."
 
 #: ../Doc/reference/datamodel.rst:1386
 msgid ""
@@ -2306,6 +2382,16 @@ msgid ""
 "priority, otherwise the left operand's method has priority.  Virtual "
 "subclassing is not considered."
 msgstr ""
+"No existen versiones con argumento intercambiado de estos métodos (a ser "
+"utilizados cuando el argumento de la izquierda no soporta la operación pero "
+"el de la derecha sí); más bien, :meth:`__lt__` y :meth:`__gt__` son el "
+"reflejo del otro, :meth:`__le__` y :meth:`__ge__` son un reflejo del otro, "
+"y :meth:`__eq__` y :meth:`__ne__` son su propio reflejo. Si los operandos "
+"son de tipos distintos, y el tipo de operando de la derecha es una clase "
+"directa o indirecta del tipo de operando de la izquierda, el método "
+"reflejado del operando de la derecha tiene prioridad, de otro modo el método "
+"del operando de la izquierda tiene prioridad. Subclases virtuales no son "
+"consideradas."
 
 #: ../Doc/reference/datamodel.rst:1403
 msgid ""
@@ -2317,6 +2403,13 @@ msgid ""
 "also play a part in comparison of objects by packing them into a tuple and "
 "hashing the tuple. Example::"
 msgstr ""
+"Llamado por la función incorporada :func:`hash` y por operaciones en "
+"miembros de colecciones *hash* incluyendo :class:`set`, :class:`frozenset`, "
+"and :class:`dict`. :meth:`__hash__` debe retornar un entero. La única "
+"propiedad requerida es que los objetos que se comparen igual tienen el mismo "
+"valor *hash*; se recomienda mezclar los valores *hash* de los componentes de "
+"los objetos que juegan un papel en la comparación de objetos al colocarlos "
+"en una tupla y calcular el *hash* de la tupla. Por ejemplo::"
 
 #: ../Doc/reference/datamodel.rst:1416
 msgid ""
@@ -2327,6 +2420,13 @@ msgid ""
 "to check the width on all supported builds.  An easy way to do this is with "
 "``python -c \"import sys; print(sys.hash_info.width)\"``."
 msgstr ""
+":func:`hash` trunca el valor retornado del método personalizado :meth:"
+"`__hash__` del objeto al tamaño de :c:type:`Py_ssize_t`. Esto normalmente "
+"son 8 bytes en estructuras de 64-bits y 4 bytes en estructuras de 32 bits. "
+"Si el :meth:`__hash__` de un objeto debe interoperar en estructuras de "
+"tamaños de bits diferentes, asegúrese de revisar la amplitud en todas las "
+"estructuras soportadas. Una forma fácil de hacer esto es con ``python -c "
+"“import sys; print(sys.hash_info.width)”``."
 
 #: ../Doc/reference/datamodel.rst:1424
 msgid ""
@@ -2339,6 +2439,14 @@ msgid ""
 "immutable (if the object's hash value changes, it will be in the wrong hash "
 "bucket)."
 msgstr ""
+"Si una clase no define un método :meth:`__eq__`, tampoco debe definir una "
+"operación :meth:`__hash__`; si define a :meth:`__eq__` pero no a :meth:"
+"`__hash__`, sus instancias no serán utilizables como elementos en "
+"colecciones *hash*. Si la clase define objetos mutables e implementa un "
+"método :meth:`__eq__`, éste no deberá implementar :meth:`__hash__`, ya que "
+"la implementación de colecciones *hash* requiere que la llave de un valor "
+"*hash* no sea mutable (si el valor del objeto *hash* cambia, estará en el "
+"cubo de *hash* equivocado)."
 
 #: ../Doc/reference/datamodel.rst:1433
 msgid ""
