--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-16 10:23+0200\n"
+"PO-Revision-Date: 2020-12-27 11:58+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Last-Translator: Juan Biondi <juanernestobiondi@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/howto/pyporting.rst:5
 msgid "Porting Python 2 Code to Python 3"
@@ -65,7 +65,7 @@ msgid ""
 msgstr ""
 "Si desea leer la versión de un desarrollador de Python fundamental sobre por "
 "qué Python 3 surgió, puede leer `Python 3 Q & A`_ de Nick Coghlan o `Why "
-"Python 3 exists`_ de Brett Cannon's."
+"Python 3 exists`_ de Brett Cannon"
 
 #: ../Doc/howto/pyporting.rst:23
 msgid ""
@@ -97,7 +97,7 @@ msgid ""
 "coverage``)"
 msgstr ""
 "Asegúrese de tener una buena cobertura de prueba (coverage.py_ puede ayudar; "
-"``cobertura de instalación de pip``)"
+"``pip install coverage``)"
 
 #: ../Doc/howto/pyporting.rst:35 ../Doc/howto/pyporting.rst:116
 msgid "Learn the differences between Python 2 & 3"
@@ -289,7 +289,7 @@ msgstr ""
 "tener herramientas reescriben el código son errores reales en las "
 "herramientas y no en el código. Si desea que un número para apuntar, trate "
 "de obtener más del 80% de cobertura (y no se sienta mal si le resulta "
-"difícil obtener una cobertura superior al 90% ). Si aún no tiene una "
+"difícil obtener una cobertura superior al 90%). Si aún no tiene una "
 "herramienta para medir la cobertura de la prueba, se recomienda coverage.py_."
 
 #: ../Doc/howto/pyporting.rst:118
